# dns-networking-laboratory

./: .gitignore  README.md  SUMMARY.md  build_executable.py  build_simple.py  installer.iss  main.py  pyproject.toml  requirements.txt  setup.py  version_info.txt
.claude/: settings.local.json
src/core/: dns_benchmark.py  dns_security.py
src/data/: dns_servers.py
src/gui/: main_window.py
src/gui/components/: benchmark_controls.py  graphs_panel.py  graphs_panel_old.py  results_display.py  server_list.py  statistics_panel.py
